# csi-tools

./: .gitignore  CLAUDE.md  install.md
.github/workflows/: frontend-build.yml
backend/: pyproject.toml
backend/src/backend/: database.py  main.py  models.py
backend/src/backend/routers/: sites.py
frontend/: index.html  package-lock.json
frontend/public/: web.config
frontend/src/: App.tsx  api.ts
frontend/src/components/: Dashboard.tsx  DataTable.tsx  SiteCard.tsx  SiteDetailDrawer.tsx  TableList.tsx
frontend/src/pages/: SitePage.tsx
